PySCF 1.7.? (2020-?-?)
----------------------
* Added
  - ADC (RADC and UADC)
  - Analytical nuclear gradients for state-average CASSCF
* Fixed
  - Bug in Mole.fromstring
  - Buffer size bug in DHF JK builder for very small systems


PySCF 1.7.4 (2020-8-2)
----------------------
* Added
  - FCIDUMP reader to load FCIDUMP and generate custom system.
  - Natural orbitals occupations to mc.mo_occ
  - Supporting UHF orbitals in FCI factory function
* Improved
  - Linear dependency treatment for basis uncontraction
* Fixed
  - ECP gradients bug when the system contains two or more ecp atoms
  - CHGCAR writer
  - Basis parser for basis in Gaussian 94 format


PySCF 1.7.3 (2020-6-10)
-----------------------
* Added
  - CcECP basis
  - Spin 1RDM for shci
  - PM localization for charge populations based on Becke partition
* Improved
  - Compatibility of get_jk methods between mcscf class and scf class
  - CPPE interface
  - Interface between IAO and PM
* Fixed
  - an CCSD integral bug introduced in 1.7.1
  - Td as its subgroup C2v
  - Fix an error when calculating grad of dft method with "HF" as xc



PySCF 1.7.2 (2020-5-13)
-----------------------
* Added
  - pbc.eph
  - State-average CASSCF example
  - Spin density analysis to uhf.analyze()
  - Passing point group and wfnsym to Dice
  - Analytical nuclear gradients for PBC SCF methods (based FFTDF)
  - Geometry optimizer and Gradients scanner for pbc
  - ccECPs and corresponding basis sets
  - Interacting hybrid method i-CCSD/MP2
  - Allow FNOs to be specified by number of active virtuals
  - Enable frozen natural orbital CC
  - Partial Cholesky orthogonalization
  - Use requested initial guess in DHF
* Improved
  - libxc5 compatibility
  - Redundant def2-*-jkfit basis sets were replaced by the def2-universal-jkfit basis
  - FCIDUMP reader
  - Treatment of breaksym in UHF init_guess function
  - literature references and DOIs
  - Ensure active orbitals are not changed during MCSCF canonicalization